--- a/assets/www/templates/pickcontract.html
+++ b/assets/www/templates/pickcontract.html
@@ -27,6 +27,7 @@
 </ion-view>
 <script type="text/javascript">
  function moveToScreen() {
+ alert ("hi");
         Ma.moveToNextScreen();
     }
 </script>
