--- a/assets/www/templates/propertydetails.html
+++ b/assets/www/templates/propertydetails.html
@@ -55,6 +55,6 @@
 		
     </ion-content>
 				<ion-footer-bar class="bar bar-footer pd-foo" ui-sref="pickcontract">
-				  <div class="title reg-tittle bold">SUBMT OFFER</div>
+				  <div class="title reg-tittle bold">SUBMIT OFFER</div>
 				</ion-footer-bar>
 </ion-view>
